Fix a z-index issue

--- a/src/styles/components/modal/new-modal.css
+++ b/src/styles/components/modal/new-modal.css
@@ -7,7 +7,7 @@
 
 .modal-backdrop {
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     display: none;
 }
 
